qr logic done, order done, menu done, base64 done
